fixed social media icons and unalign icons

--- a/start_writing.css
+++ b/start_writing.css
@@ -172,7 +172,7 @@ textarea#blogContent::placeholder {
 }
 
 .footer-container {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
